--- a/indext.html
+++ b/indext.html
@@ -12,6 +12,33 @@
       <h1><img src="images/dinos-r-us.svg" alt="Dinos R' Us"></h1>"
   </header>
 
+  <main>
+
+    <h2>Hadrosaur</h2>
+    <figure>
+      <img src="images/hadrosaur.jpg" alt"">
+      <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+    </figure>
+
+  </main>
+
 
 </body>
 </html>
+
+Dinos ’R’ Us
+
+Hadrosaur
+Iguanodon
+Stegosaurus
+
+---
+
+Hadrosaur
+
+
+Iguanodon
+Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.
+
+Stegosaurus
+Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.
