--- a/indext.html
+++ b/indext.html
@@ -9,7 +9,12 @@
 <body>
 
   <header>
-      <h1><img src="images/dinos-r-us.svg" alt="Dinos R' Us"></h1>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos R' Us"></h1>
+    <nav>
+      <ol>
+        <li><a href="#hadrosaur">Hadrosaur</a></li>
+        <li><a href="#hadrosaur">Iguanodon</a></li>
+        <li><a href="#hadrosaur">Stegosaurus</a></li>
   </header>
 
   <main>
@@ -28,7 +33,7 @@
 
     <h2>Stegosaurus</h2>
     <figure>
-      <img src="images/hadrosaur.jpg" alt"">
+      <img src="images/stegosaurus.jpg" alt"">
       <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
     </figure>
 
