--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Dinosaurs R' Us</title>
+  <title>Dinos R' Us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -16,6 +16,8 @@
         <li><a href="#hadrosaur">Hadrosaur</a></li>
         <li><a href="#hadrosaur">Iguanodon</a></li>
         <li><a href="#hadrosaur">Stegosaurus</a></li>
+      </ol>
+    </nav>
   </header>
 
   <main>
