--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Dinos R' Us</title>
+  <title>Dinos 'R' Us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -24,19 +24,19 @@
 
     <h2>Hadrosaur</h2>
     <figure>
-      <img src="images/hadrosaur.jpg" alt"">
+      <img src="images/hadrosaur.jpg">
       <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
     </figure>
 
     <h2>Iguanodon</h2>
     <figure>
-      <img src="images/iguanodon.jpg" alt"">
+      <img src="images/iguanodon.jpg">
       <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
     </figure>
 
     <h2>Stegosaurus</h2>
     <figure>
-      <img src="images/stegosaurus.jpg" alt"">
+      <img src="images/stegosaurus.jpg">
       <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
     </figure>
 
