--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 
   <header>
-    <h1><img src="images/dinos-r-us.svg" alt="Dinos R' Us"></h1>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
     <nav>
       <ol>
         <li><a href="#hadrosaur">Hadrosaur</a></li>
-        <li><a href="#hadrosaur">Iguanodon</a></li>
-        <li><a href="#hadrosaur">Stegosaurus</a></li>
+        <li><a href="#iguanodon">Iguanodon</a></li>
+        <li><a href="#stegosaurus">Stegosaurus</a></li>
       </ol>
     </nav>
   </header>
@@ -41,7 +41,6 @@
     </figure>
 
   </main>
-
 
 </body>
 </html>
